create clock section and style it Related #3

--- a/index.html
+++ b/index.html
@@ -38,10 +38,27 @@
                 <li class="instagram"><a href="#"><i class="fa fa-instagram " aria-hidden="true"></i></a></li>
 
             </ul>
-
-
         </nav>
     </header>
+
+    <section class="flex">
+        <div class="clock flex">
+            <h2>london</h2>
+
+            <div class="clock-london">02:11:3</div>
+        </div>
+        <div class="clock flex">
+            <h2>jerusalem</h2>
+
+            <div class="clock-london">02:11:3</div>
+        </div>
+        <div class="clock flex">
+            <h2>china</h2>
+
+            <div class="clock-china">02:11:3</div>
+        </div>
+
+    </section>
 
 </body>
 
