create table section and style it Related #3

--- a/index.html
+++ b/index.html
@@ -59,6 +59,41 @@
         </div>
 
     </section>
+    <section>
+        <div class="heade-market flex">
+            <h2>markets</h2>
+            <div class="flex">
+                <label for="search">search</label>
+                <input type="text" id="search" placeholder="search by name">
+            </div>
+        </div>
+
+        <div class="table">
+            <table>
+                <tr>
+                    <th>Company</th>
+                    <th>Contact</th>
+                    <th>Country</th>
+                    <th>Contact</th>
+                    <th>Country</th>
+                </tr>
+                <tr>
+                    <td>Alfreds Futterkiste</td>
+                    <td>Maria Anders</td>
+                    <td>Germany</td>
+                    <td>Maria Anders</td>
+                    <td>Germany</td>
+                </tr>
+                <tr>
+                    <td>Centro comercial Moctezuma</td>
+                    <td>Francisco Chang</td>
+                    <td>Mexico</td>
+                    <td>Francisco Chang</td>
+                    <td>Mexico</td>
+                </tr>
+            </table>
+        </div>
+    </section>
 
 </body>
 
