add empty elements in HTML code  to prepare them for DOM N Relates #5

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trading View</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link
+    <!-- <link
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       rel="stylesheet"
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-    />
+    /> -->
   </head>
   <body>
     <header>
@@ -47,6 +47,18 @@
         </ul>
       </nav>
     </header>
+    <section class="sympols-section">
+        <div class="sympol-container"></div>
+        <div class="sympol-container"></div>
+        <div class="sympol-container"></div>
+        <div class="sympol-container"></div>
+        <div class="sympol-container"></div>
+        <div class="sympol-container"></div>
+        <div class="sympol-container"></div>
+        <div class="sympol-container"></div>
+        <div class="sympol-container"></div>
+        <div class="sympol-container"></div>
+    </section>
 
     <script src="./scripts/Logic.js"></script>
     <script src="./scripts/CurrencyApi.js"></script>
