implemented function for fetching time for every city

--- a/index.html
+++ b/index.html
@@ -45,21 +45,22 @@
         <div class="clock flex">
             <h2>london</h2>
 
-            <div class="clock-london">02:11:3</div>
+            <div class="clock-London">00:00:00</div>
         </div>
         <div class="clock flex">
             <h2>jerusalem</h2>
 
-            <div class="clock-london">02:11:3</div>
+            <div class="clock-Jerusalem">00:00:00</div>
         </div>
         <div class="clock flex">
-            <h2>china</h2>
+            <h2>moscow</h2>
 
-            <div class="clock-china">02:11:3</div>
+            <div class="clock-Moscow">00:00:00</div>
         </div>
 
     </section>
-
+    <script src="./scripts/Logic.js"></script>
+    <script src="./scripts/TimeApi.js"></script>
 </body>
 
 </html>
