--- a/index.html
+++ b/index.html
@@ -42,7 +42,21 @@
 
         </nav>
     </header>
+    <div class="indecatorValue">value</div>
 
+    <div class="dropdown">
+        <button class="dropbtn">Dropdown</button>
+        <div class="dropdown-content">
+          <span class="ema">ema</span>
+          <span class="sma">sma</span>
+          <span >Link 3</span>
+        </div>
+      </div>
 </body>
+    <script src="./scripts/Logic.js"></script>
+    <script src="./scripts/ema.js"></script>
+    <script src="./scripts/sma.js"></script>
+    <script src="./scripts/DomFunctions.js"></script>
+
 
 </html>
