create footer and style it Related #3

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
 
     </section>
-    <section>
+    <section class="show-exchange">
         <div class="heade-market flex">
             <h2>markets</h2>
             <div class="flex">
@@ -67,33 +67,38 @@
                 <input type="text" id="search" placeholder="search by name">
             </div>
         </div>
-
-        <div class="table">
-            <table>
-                <tr>
-                    <th>Company</th>
-                    <th>Contact</th>
-                    <th>Country</th>
-                    <th>Contact</th>
-                    <th>Country</th>
-                </tr>
-                <tr>
-                    <td>Alfreds Futterkiste</td>
-                    <td>Maria Anders</td>
-                    <td>Germany</td>
-                    <td>Maria Anders</td>
-                    <td>Germany</td>
-                </tr>
-                <tr>
-                    <td>Centro comercial Moctezuma</td>
-                    <td>Francisco Chang</td>
-                    <td>Mexico</td>
-                    <td>Francisco Chang</td>
-                    <td>Mexico</td>
-                </tr>
-            </table>
-        </div>
     </section>
+
+
+    <!--start footer -->
+
+    <footer>
+        <div class="newssetler flex">
+            <p>subscribe to our newssetler for exclusive tips on exchange and money</p>
+            <div clss="flex">
+                <input type="text" placeholder="your email address">
+                <button type="button">► </button>
+            </div>
+        </div>
+        <nav class="nav-footer-link">
+            <ul class="flex">
+                <li><a href="#">markets</a></li>
+                <li><a href="#">trade </a></li>
+                <li><a href="#">derivatives</a></li>
+                <li><a href="#">finance</a></li>
+                <li><a href="#">about us</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+        </nav>
+        <div class="info text">
+            <div class="address"> london street 100-gh-4 </div>
+            <div class="phone">0001+ 1238512597</div>
+        </div>
+        <div class="copywrite text">
+            © all right reserved for owner this website
+        </div>
+    </footer>
+
 
 </body>
 
