make show time function Realted #19

--- a/index.html
+++ b/index.html
@@ -65,17 +65,8 @@
                 <input type="text" id="search" placeholder="search by name">
             </div>
         </div>
-        <section class="sympols-section">
-            <div class="sympol-container"></div>
-            <div class="sympol-container"></div>
-            <div class="sympol-container"></div>
-            <div class="sympol-container"></div>
-            <div class="sympol-container"></div>
-            <div class="sympol-container"></div>
-            <div class="sympol-container"></div>
-            <div class="sympol-container"></div>
-            <div class="sympol-container"></div>
-            <div class="sympol-container"></div>
+        <section class="sympols-section flex">
+
         </section>
     </section>
 
