--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </section>
 
     <section class="search">
-        <input type="text">
+        <input type="text" class="searchInput">
         <button class="searchBtn">search</button>
     </section>
     <section class="sympols-section">
