delete empty divs and format document Relates #24

--- a/index.html
+++ b/index.html
@@ -76,22 +76,12 @@
         <input type="text" class="searchInput">
         <button class="searchBtn">search</button>
     </section>
-    <section class="sympols-section">
-        <div class="sympol-container"></div>
-        <div class="sympol-container"></div>
-        <div class="sympol-container"></div>
-        <div class="sympol-container"></div>
-        <div class="sympol-container"></div>
-        <div class="sympol-container"></div>
-        <div class="sympol-container"></div>
-        <div class="sympol-container"></div>
-        <div class="sympol-container"></div>
-        <div class="sympol-container"></div>
-    </section>
+
+    <section class="sympols-section"></section>
+    <!-- scripts -->
     <script src="./scripts/DomFunctions.js"></script>
     <script src="./scripts/Logic.js"></script>
     <script src="./scripts/CurrencyApi.js"></script>
-    <script src="./scripts/DomFunctions.js"></script>
     <script src="./scripts/TimeApi.js"></script>
     <script src="./scripts/ma.js"></script>
     <script src="./scripts/sma.js"></script>
