create footer and style Related #3

--- a/index.html
+++ b/index.html
@@ -77,6 +77,34 @@
     <script src="./scripts/TimeApi.js"></script>
     <script src="./scripts/ma.js"></script>
     <script src="./scripts/sma.js"></script>
+
+    <footer>
+        <div class="newssetler flex">
+            <p>subscribe to our newssetler for exclusive tips on exchange and money</p>
+            <div clss="flex">
+                <input type="text" placeholder="your email address">
+                <button type="button">► </button>
+            </div>
+        </div>
+        <nav class="nav-footer-link">
+            <ul class="flex">
+                <li><a href="#">markets</a></li>
+                <li><a href="#">trade </a></li>
+                <li><a href="#">derivatives</a></li>
+                <li><a href="#">finance</a></li>
+                <li><a href="#">about us</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+        </nav>
+        <div class="info text">
+            <div class="address"> london street 100-gh-4 </div>
+            <div class="phone">0001+ 1238512597</div>
+        </div>
+        <div class="copywrite text">
+            © all right reserved for owner this website
+        </div>
+    </footer>
+
 </body>
 
 </html>
