--- a/index.html
+++ b/index.html
@@ -54,19 +54,25 @@
         </div>
     </section>
 
-    <section class="search">
-        <input type="text" class="searchInput">
-        <button class="searchBtn">search</button>
-    </section>
+    <section class="show-exchange">
+        <div class="heade-market flex">
+            <h2>markets</h2>
+            <div class="flex">
+                <label for="search">search</label>
+                <input type="text" id="search" placeholder="search by name">
+            </div>
+        </div>
 
-    <section class="sympols-section"></section>
-    <!-- scripts -->
-    <script src="./scripts/DomFunctions.js"></script>
-    <script src="./scripts/Logic.js"></script>
-    <script src="./scripts/CurrencyApi.js"></script>
-    <script src="./scripts/TimeApi.js"></script>
-    <script src="./scripts/ma.js"></script>
-    <script src="./scripts/sma.js"></script>
+        <section class="sympols-section flex">
+            <!-- scripts -->
+            <script src="./scripts/DomFunctions.js"></script>
+            <script src="./scripts/Logic.js"></script>
+            <script src="./scripts/CurrencyApi.js"></script>
+            <script src="./scripts/TimeApi.js"></script>
+            <script src="./scripts/ma.js"></script>
+            <script src="./scripts/sma.js"></script>
+        </section>
+    </section>
 
     <footer>
         <div class="newssetler flex">
