fix search function

--- a/index.html
+++ b/index.html
@@ -58,19 +58,15 @@
         <div class="heade-market flex">
             <h2>markets</h2>
             <div class="flex">
-                <label for="search">search</label>
-                <input type="text" id="search" placeholder="search by name">
+                <!-- <label for="search">search</label> -->
+                <input type="text" class="searchInput" id="search" placeholder="search by name" >
+                <button class="searchBtn">search</button>
             </div>
         </div>
 
         <section class="sympols-section flex">
-            <!-- scripts -->
-            <script src="./scripts/DomFunctions.js"></script>
-            <script src="./scripts/Logic.js"></script>
-            <script src="./scripts/CurrencyApi.js"></script>
-            <script src="./scripts/TimeApi.js"></script>
-            <script src="./scripts/ma.js"></script>
-            <script src="./scripts/sma.js"></script>
+           
+
         </section>
     </section>
 
@@ -100,7 +96,12 @@
             © all right reserved for owner this website
         </div>
     </footer>
-
+    <script src="./scripts/DomFunctions.js"></script>
+    <script src="./scripts/Logic.js"></script>
+    <script src="./scripts/CurrencyApi.js"></script>
+    <script src="./scripts/TimeApi.js"></script>
+    <script src="./scripts/ma.js"></script>
+    <script src="./scripts/sma.js"></script>
 </body>
 
 </html>
