make header responsive Related #38

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <body>
     <header>
-        <nav class="flex">
+        <nav class="flex nav">
             <div class="logo">tradingView</div>
-            <ul class="flex">
+            <ul class="flex nav-link">
                 <li>
                     <a href="#">markets</a>
                 </li>
@@ -59,13 +59,13 @@
             <h2>markets</h2>
             <div class="flex">
                 <!-- <label for="search">search</label> -->
-                <input type="text" class="searchInput" id="search" placeholder="search by name" >
+                <input type="text" class="searchInput" id="search" placeholder="search by name">
                 <button class="searchBtn">search</button>
             </div>
         </div>
 
         <section class="sympols-section flex">
-           
+
 
         </section>
     </section>
