--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </ul>
         </nav>
     </header>
-    <section class="flex">
+    <section class="flex clock-cont">
         <div class="clock flex">
             <h2>london</h2>
             <div class="clock-London">00:00:00</div>
