--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
         </div>
         <nav class="nav-footer-link">
-            <ul class="flex">
+            <ul class="list flex">
                 <li><a href="#">markets</a></li>
                 <li><a href="#">trade </a></li>
                 <li><a href="#">derivatives</a></li>
