handled other status code for the fetch function Relates #45

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
     </footer>
     <script src="./scripts/DomFunctions.js"></script>
-    <script src="./scripts/Logic.js"></script>
+    <script src="./scripts/General.js"></script>
     <script src="./scripts/CurrencyApi.js"></script>
     <script src="./scripts/TimeApi.js"></script>
     <script src="./scripts/ma.js"></script>
